[package]
name = "launchpad"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "amm/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
amm = { path = "../amm", features = ["cpi"] }
